--- a/controle-vendas/src/forms/frmCadastroItems.form
+++ b/controle-vendas/src/forms/frmCadastroItems.form
@@ -152,6 +152,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Cancela"/>
       </Properties>
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btCancelarMouseClicked"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btSalvar">
       <Properties>
