--- a/controle-vendas/src/forms/frmCadastroItem.form
+++ b/controle-vendas/src/forms/frmCadastroItem.form
@@ -322,7 +322,7 @@
               </Group>
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace min="-2" pref="59" max="-2" attributes="0"/>
-                  <Component id="btCancelar1" min="-2" max="-2" attributes="0"/>
+                  <Component id="btAtualizarStoque" min="-2" max="-2" attributes="0"/>
                   <EmptySpace pref="28" max="32767" attributes="0"/>
               </Group>
           </Group>
@@ -342,7 +342,7 @@
                       <Component id="jLabel9" alignment="3" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
-                  <Component id="btCancelar1" min="-2" pref="35" max="-2" attributes="0"/>
+                  <Component id="btAtualizarStoque" min="-2" pref="35" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
               </Group>
           </Group>
@@ -374,12 +374,12 @@
         </Component>
         <Component class="javax.swing.JTextField" name="quantidadeAdicionada">
         </Component>
-        <Component class="javax.swing.JButton" name="btCancelar1">
+        <Component class="javax.swing.JButton" name="btAtualizarStoque">
           <Properties>
             <Property name="text" type="java.lang.String" value="Atualizar"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btCancelar1ActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btAtualizarStoqueActionPerformed"/>
           </Events>
         </Component>
       </SubComponents>
@@ -409,7 +409,7 @@
 
           <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
           <SubComponents>
-            <Component class="javax.swing.JTable" name="jTable1">
+            <Component class="javax.swing.JTable" name="AddItemVeiw">
               <Properties>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                   <Table columnCount="3" rowCount="0">
